--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/three": "^0.173.0",
     "three": "^0.173.0",
     "typescript": "~5.6.2",
-    "vite": "^6.0.5"
+    "vite": "^6.0.5",
+    "vite-plugin-top-level-await": "^1.4.4"
   }
 }
