--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "gh-pages -d ./dist"
   },
   "devDependencies": {
     "@dimforge/rapier3d-compat": "^0.14.0",
     "@types/three": "^0.173.0",
+    "gh-pages": "^6.3.0",
     "three": "^0.173.0",
     "typescript": "~5.6.2",
     "vite": "^6.0.5",
